# agent-patterns

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
pattern_00_augmented_llm_pr_triager/: README.md  __init__.py  __main__.py  agent.py  tools.py
shared/: __init__.py  chat_client.py
